# KryptoRozliczator

./: .cursorignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.cursor/: settings.json
kryptorozliczator/: __init__.py  rozlicz.ipynb
kryptorozliczator/config/: README.md  wallet_config.example.json
kryptorozliczator/exchange_interfaces/: exchange_interface.py  zonda_interface.py
kryptorozliczator/rates/: crypto_rates.py  nbp_rates.py
kryptorozliczator/wallet_interfaces/: transfers.py
