[tool.poetry]
name = "kryptorozliczator"
version = "0.1.0"
description = "A tool for cryptocurrency settlement"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "kryptorozliczator"}]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.12,<4"
ccxt = "^4.4.75"
dotenv = "^0.9.9"
pandas = "^2.2.3"
bip32utils = "^0.3.post4"
web3 = "^7.10.0"
jupyter = "^1.1.1"
notebook = "^7.4.1"

[tool.poetry.urls]
Homepage = "https://github.com/yourusername/kryptorozliczator"
Repository = "https://github.com/yourusername/kryptorozliczator.git"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
ruff = "^0.2.1"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.6.0"
ipykernel = "^6.29.5"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["kryptorozliczator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
